pantalla de camara y navegacion

--- a/Form2.resx
+++ b/Form2.resx
@@ -3985,4 +3985,47 @@
         1tw3ygE0LuazuDf3Lsv/AtcHgHl3da3pAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALgAAAC4CAYAAABQMybHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAACKRJREFUeF7tnI2R7DQQBl8IhEAIhEAIhEAIZEAIhEAIhEAIhEAIhADbFKaOQ+sZ
+        +Xckd1d11at3u17Z+1keyVp/EREREREREREREREREREREREREREREREREREREREREREREREREREREZFV
+        vnr5bVFpm8gufnr5Z1F/eSmyGXrJP162wlXFb16KbOLXl61QVfL3lyLd/PCyFaiKfv9SJA2Dt+qlyUdp
+        69cvRVJUHli+0wGnpBhhYPlOB5wSMsLA8p0OOGWVkQaW73TAKU1GG1i+0wGnNBlxYPlOB5zyH0YeWL7T
+        Aaf8y8gDy3c64JS/mWFg+U4HnA9nloHlOx1wPpyZBpbvdMD5UGYcWL7TAecDmXFg+U4HnCdBjVvRmQeW
+        72SfW8eigsPApfDHl/SOT7n86zEyVmBMVHZQzJSUodYj5GpTiifMRui1lpn9+e5lq4GqeyVbt8IA4beX
+        rcap7pWS91YYVLYapnqU3K+4jSdOt+m13jrg/Pllq1GqR3nrYNOA69kacJ1aA65Ta8B1ag24Tq0B16k1
+        4Dq1wwacJbXcpTpDluy2PlPHc9iAn9lwF4DNowFvYMDn0YA3MODzaMAbGPB5NOANDPg8GvAGBnweDXiD
+        qgH3R9n9GvAGdwac+X2OCz/EZrE+8/L88onHISzPAOHf/D/t5GkEzNvzHn/+938NeIMrA06vTKgJ6RGP
+        SOMk4MR40pO31jTgDa4IOAGk9z37yUzsy57jPLoGvMGZASfYdzzMks98YtANeIMzAk6w2e7dULvzMM1W
+        G2fUgDc4MuCEiZq42kMiKY+eEHQD3uCogNNrVwv2R2jb7IPRYQPOlBi90Bke8axEtnFEuNkG04LU0Jx4
+        tI8y48inqM78bMhhA15Vpv32PGxmWY/OCZy9sUMvTEh571Zoc2vbo2vAD5RAbhlIEkwCelRNzLa2tIOr
+        xGx3Sw34QRKM3h6U159ZA3MV6J2SpPRpbWtUDfhBUhtnuXpOmi+5p2bnxGttZ0QN+AFSEmSh1r2rDKC2
+        zzLL71IN+E7Zh8xsCa+psL+URFkIR2sbI2nAd0iNmw13pbDQ7mzJwmtb2xhFA77DzKCSIG2dHSFcHCNK
+        IEobZkaWufC9S2QpkzIDUE7O1vtH0YBvlLZHEI7eAFJC9C6d5STiBOidkeHEy1yBRv6eDPgGs71fT1lC
+        OLfMXX+Gq0rPFSNTk4/cixvwDWZmI7KzEJws9L6ZnrQHypjW57XMXI1GnVUx4J0SyCiM9MSt936W8qX3
+        RkwPbDtbIkVXD/Z5xNWHBrzTqPcmCJlQURoc3Wu34DMytTknbkTPVaGKBrzTaHots2iJE+CKcH8kc9JF
+        d2Npc+t9lTXgHUYHiwBEl/HsAPVoaBuf3WrTYqYXn+07O5XRDlZUnmQGYkfMlGyFE6vVpo9G+zhamWLA
+        O4zKk6j3vvVg/0N0zKNefLQyxYAnpYZdI+od7ypNPpMJaNTOkWZTDHjSveVJz4rDs4naundfK2nAk0a1
+        czQVl13cdAVRLx6VKexL630VNeBJ1wIafeFReXMHUZmxtr8j1eEGPOka0S9gKpUnC7Sp1dbFaE48mnKs
+        ogFPSG+3RnRz586pwXdEJyX7tMYoA00DnjAqMaKAV6q/F6IyIxpoZm7/V9CAJ4yWlEb7UTHg0GrrYhSM
+        Ub47A56Qdq7BQWy9b7Eqa3V0dFJHNXwVDXjCaJC4tpApmnK7k7V2R2XZKHPhBjxhdJDW6tHKAV8bKO4t
+        y6powBNGBym6XDOgq0irrYt7y7IqGvCE0TRhdLmusAblM9HNqagscxYlwSgBj8qMaAmp8+D3acCTrpUZ
+        BLj1nsXocn8H0VUnOilb76moAU+6Z21GxYFm1AOv7W9U3lTSgCeNnmK1NuWGlW72RGvXoynC6P2VNOBJ
+        o0FXdMmvVKZEbeXva0Tvr6QBTxqVGZklpBV6cdrAvrTatxhdrUaZQUED3mEU0KiuvfVg/0N0zKMp0ZHK
+        EzTgHUZTZ5lfnN85ZRjN9mBUnkQrJ6tpwDuMBl8Q9eKUB3fc+OEzo9KEtkd3XQlM671VNeCdRmVKppck
+        aFfevuezolkejK5QbCc6SappwDuNLuGQCROvuWLQyWdket1M7z3S7MmiAe+UHiwKZnQbfJFtRTMWe2Db
+        Ucm0GI0NRuy90YBvkHZH9DziLJpj74Uwss1sIDOfP2LvjQZ8o5nyomf/CGP0S/YIgs02sr02ZsLNvo7Y
+        e6MB32j2wPXeFCFIhC5buhBqXksPm6n9P8rro7obnvA9ncLIBw4z030EqDd4H+UL4jgRYGSmgxOA/+Pk
+        2dqzZge52fFEVQ34DglXpgcEDnRrG3fIiZFp996Ts4IGfKeEJQs9b2sbV0obsuGudFJu1YAfYM9BzNwI
+        OsPeQWyFk/EIDfhB9s6AXLXvy6A1U28vjLbeZE0DfqC9N20I3ZnHgPKpd91LZs3KSBrwg92yWpBQ0Wv2
+        Tim2ZBvMtvQGG2j7TOFGA36CBGwrDO6WsDODsRY4/sZr+BJ5z5ZQL9Dm1meMrgE/yZ7ZlQyUM5RAhJh/
+        Z2ZCMrCdmb8HA36i2Zspd0HbjiiLKmvAL5BZjErQa1OSzFZvtzTgF0mY9i6m2gvBZiDZsxhrdA34xVK2
+        3BF06vfRb7tv0YDfJGGjTDizRl+mH58Y7EUDXkAGetTpvTeKWrANTpwnh/qjBrygfCkcG4JKOUNocZke
+        pGemluZv9NCcHJwkT6qtsxpwnVoDrlNrwHVqDbhOrQHXqTXgOrUGXKf21oDP8rs/rSud6G3Mushe63jr
+        Ss67fmGuz3HLTwgPg9vOrUapHiFLlG//wQnrKVqNU90rJXAJZv/ZlF4vmaJCKINThnqU5cK9wIDA3ly3
+        SL1Ndu7+WWAaBgfLOmjVNVkfX7LHFhERERERERERERERERERERERERERERERERERERERERERERERERER
+        kZH58uUvs872QzHMTWcAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
