--- a/Form2.resx
+++ b/Form2.resx
@@ -3985,7 +3985,7 @@
         1tw3ygE0LuazuDf3Lsv/AtcHgHl3da3pAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pbCamera.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAALgAAAC4CAYAAABQMybHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAACKRJREFUeF7tnI2R7DQQBl8IhEAIhEAIhEAIZEAIhEAIhEAIhEAIhADbFKaOQ+sZ
