--- a/Form2.resx
+++ b/Form2.resx
@@ -152,7 +152,7 @@
         hFJ6AyJ6kh63SbboAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pbOriginal.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAWYAAAFlCAYAAADYskK4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wgAADsIBFShKgAAA/7JJREFUeF7k/XWAXNeR9o9//3rfoBkkWcyWZEtmZmZmxphiO+Q4zLCcLGd3s7vv
